static/themes/concept/theme.css
/* ... */
/* Style fixes for the app settings section */
.kiwi-appsettings-close{
    position: absolute;
    top: 20px;
    right: 30px;
}

.kiwi-appsettings .u-form label span{
    width: auto;
    max-width: none;
}

.app-settings-tab-container{
    width: 100%;
    max-width: none;
    position: relative;
}

/* Aliases Spacing fix */
.kiwi-appsettings-aliases .kiwi-settings-aliases{
    margin-left: 0;
}

.kiwi-settings-aliases-input{
    height: auto;
    min-height: 500px;
}

@media screen and (max-width: 1500px){
    .kiwi-statebrowser{
        width: 15%;
    }
    .kiwi-workspace{
        margin-left: 15%;
    }
}

@media screen and (max-width: 1200px){
    .kiwi-statebrowser{
        width: 20%;
    }
    .kiwi-workspace{
        margin-left: 20%;
    }
}

/* Tablet Size */
@media screen and (max-width: 1024px) {
    .kiwi-notconnected-caption {
        font-size: 1em;
    }

    .kiwi-notconnected .button-container .button {
        clear: both;
        margin: 0 5% 1em;
        font-size: 1em;
        display: block;
        padding: 0.6em 0.8em 0.6em 0.4em;
        width: 90%;
        box-sizing: border-box;
    }

    .kiwi-notconnected .button-container .button.connection-settings{
        font-size: 1em;
        max-width: none;
    }

    .kiwi-notconnected .button-container .button i {
        display: none;
    }
}

@media screen and (max-width: 900px){
    .kiwi-workspace{
        width: 100%;
        margin: 0;
    }

    .kiwi-wrap--statebrowser-drawopen .kiwi-statebrowser {
        width: 100%;
    }

    .kiwi-header-options .u-button {
        padding: 0;
        float:right;
    }
    .kiwi-header-options .u-button:before {
        display: none;
    }
}

